[package]
name = "pkcs12cracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.79"
memmap2 = "0.9.5"
rayon = "1.10.0"
num_cpus = "1.16.0"
openssl = "0.10.68"

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_cmd = "2.0.13"
predicates = "3.0.4"
anyhow = "1.0.79"
