[package]
name = "pkcs12cracker"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Dyachenko"]
description = "High-performance, multi-threaded PKCS#12 password cracker supporting dictionary, pattern-based, and brute force attacks"
license = "MIT"
documentation = "https://docs.rs/pkcs12cracker"
homepage = "https://github.com/wowinter13/pkcs12cracker"
repository = "https://github.com/wowinter13/pkcs12cracker"
readme = "README.md"
keywords = [
  "pkcs12",
  "security",
  "password",
  "cracking",
  "pfx",
  "p12",
  "openssl",
  "cryptography",
]
categories = ["cryptography", "command-line-utilities", "security", "passwords"]
exclude = ["/.github", "/tests/fixtures", "*.pfx", "*.p12", "/img"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }

anyhow = "1.0.79"
openssl = "0.10.68"
memmap2 = "0.9.5"
rayon = "1.10.0"
num_cpus = "1.16.0"
log = "0.4.20"

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_cmd = "2.0.13"
predicates = "3.0.4"
tempfile = "3.10.0"
test-log = "0.2.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
